--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TutorialApp</string>
-    <string name="button_text">Click me</string>
+    <string name="button_text">Berechnen</string>
 </resources>
